--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Conection to Database
-
-spring.dataSource.url=jdbc:mysql://127.0.0.1:3306/springboot
-spring.dataSource.username=root
-spring.dataSource.password=''
+#server.port = 8080  server x default of spring-boot
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot_api?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=ADMINPHP
 spring.jpa.hibernate.ddl-auto=update
